syntax = "proto3";
package terra.market.v1beta1;

import "gogoproto/gogo.proto";
import "terra/market/v1beta1/market.proto";

option go_package = "github.com/terra-money/core/x/market/types";

// GenesisState defines the market module's genesis state.
message GenesisState {
  // params defines all the paramaters of the module.
  Params params = 1 [(gogoproto.nullable) = false];

  // the gap between the MintPool and the MintBasePool
  bytes mint_pool_delta = 2
      [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false];
  // the gap between the BurnPool and the BurnBasePool
  bytes burn_pool_delta = 3
      [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false];
}
