syntax = "proto3";
package terra.wasm.v1beta1.stargatelayer.gov;

import "cosmos/base/query/v1beta1/pagination.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/gov/v1beta1/gov.proto";

option go_package = "github.com/terra-money/core/x/wasm/stargatelayer/gov";

// QueryProposalResponse is the response type for the Query/Proposal RPC method.
message QueryProposalResponse {
  cosmos.gov.v1beta1.Proposal proposal = 1 [(gogoproto.nullable) = false];
}

// QueryProposalsResponse is the response type for the Query/Proposals RPC
// method.
message QueryProposalsResponse {
  repeated cosmos.gov.v1beta1.Proposal proposals = 1 [(gogoproto.nullable) = false];

  // pagination defines the pagination in the response.
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// QueryVoteResponse is the response type for the Query/Vote RPC method.
message QueryVoteResponse {
  // vote defined the queried vote.
  cosmos.gov.v1beta1.Vote vote = 1 [(gogoproto.nullable) = false];
}

// QueryVotesResponse is the response type for the Query/Votes RPC method.
message QueryVotesResponse {
  // votes defined the queried votes.
  repeated cosmos.gov.v1beta1.Vote votes = 1 [(gogoproto.nullable) = false];

  // pagination defines the pagination in the response.
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// QueryParamsResponse is the response type for the Query/Params RPC method.
message QueryParamsResponse {
  // voting_params defines the parameters related to voting.
  cosmos.gov.v1beta1.VotingParams voting_params = 1 [(gogoproto.nullable) = false];
  // deposit_params defines the parameters related to deposit.
  cosmos.gov.v1beta1.DepositParams deposit_params = 2 [(gogoproto.nullable) = false];
  // tally_params defines the parameters related to tally.
  cosmos.gov.v1beta1.TallyParams tally_params = 3 [(gogoproto.nullable) = false];
}

// QueryDepositResponse is the response type for the Query/Deposit RPC method.
message QueryDepositResponse {
  // deposit defines the requested deposit.
  cosmos.gov.v1beta1.Deposit deposit = 1 [(gogoproto.nullable) = false];
}

// QueryDepositsResponse is the response type for the Query/Deposits RPC method.
message QueryDepositsResponse {
  repeated cosmos.gov.v1beta1.Deposit deposits = 1 [(gogoproto.nullable) = false];

  // pagination defines the pagination in the response.
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// QueryTallyResultResponse is the response type for the Query/Tally RPC method.
message QueryTallyResultResponse {
  // tally defines the requested tally.
  cosmos.gov.v1beta1.TallyResult tally = 1 [(gogoproto.nullable) = false];
}
